# openize-markitdown-python

./: README.md  main.py  pytest.ini  setup.cfg  setup.py
.github/workflows/: production-publish.yml  publish.yml
Openize/MarkItDown/: converters.py  factory.py  llm_strategy.py  main.py  processor.py
src/Openize/MarkItDown/: converters.py  factory.py  llm_strategy.py  main.py  processor.py
