[metadata]
name = openize-markitdown
version = 25.3.0
author="Umar",
author_email="umar320@gmail.com",
description = A document converter for Word, PDF, Excel, and PowerPoint to Markdown.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE
url = https://github.com/openize-com/openize-markitdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
install_requires =
    aspose-words    
    aspose-cells
    aspose-slides
    openai
